--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.17.1",
-    "http-server": "^0.12.3",
-    "socket.io": "^4.0.1",
-    "socket.io-client": "^4.0.1"
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "http-server": "^14.1.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "mysql": "^2.18.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "PORT=80 node server.js"
